--- a/css.css
+++ b/css.css
@@ -1,6 +1,3 @@
-*{
-    border: solid;
-}
 
 #upperbar{
     z-index: 100;
@@ -65,7 +62,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border-color:black;
     border-bottom:solid;
     border-top: solid;
@@ -80,15 +77,59 @@
     transform: scalex(1) scaleY(1.1);
 }
 #upper2 a:hover{
-    transform: scale(1.3);
+    transform: scale(1.1);
     color: rgb(255, 232, 206);
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 #upper3{
     width: 20%;
     display: flex;
     align-items: center;
+    justify-content: space-around;
 }
+#linguagemslct{
+    transition: all 0.1s linear;
+    width: 1.5vh;
+    height: .75vh;
+}
+#upper3 span{
+    padding: .5vh;
+}
+#upper3 div{
+    display: flex;
+    align-items: center;
+}
+
+#darkmd{
+    
+    transition: all 0.15s linear;
+    display: flex;
+    align-items: center;
+    border: solid 0.1px black;
+    position: relative;
+    width: 3.5vh;
+    height: 1vh;
+    border-radius: 100px;
+}
+#balldm{
+    background-color: black;
+    border: solid 0.1px black;
+    margin: 0.25vh;
+    transition: all 0.15s linear;
+    left:0;
+    height: 0.4vh;
+    width: 0.4vh;
+    border-radius: 100%;
+    position: absolute;
+}
+.balldark{
+    background-color: rgb(255, 232, 206);
+    transform: translateX(2.25vh);
+}
+#lgn:hover{
+    
+}
+
 #upperbar div{
     height: 100%;
 }
@@ -231,12 +272,29 @@
     background-image: url(carro3.avif);
 }
 #descricaoshow{
-    display: grid;
+    padding-left: 3vh;
+    width: 100%;
+    height: 100%;
+    display: flex;
     text-align: center;
-    row-gap: 2;
-    columns: 3;
 }
 
+#descricaoshow span{
+}
+#descricaoshow li{
+    margin: 0.4vh;
+    list-style: none;
+    font-size: 150%;
+    padding: 1vh;
+}
+#sp1 li{
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 232, 206);
+}
+#tcolumn1{
+    height: 9vh;
+    width: 90%;
+}
 #searchbar{
     display: flex;
     align-items: center;
@@ -247,6 +305,10 @@
     border-radius: 15px;
 } 
 #searchbar input{
+    padding-left: 0.5%;
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-radius: 15px;
     font-size: 120%;
 }
 #searchbar i{
@@ -257,14 +319,16 @@
     background: transparent;
     border: 0;
 }
-#carpesquisa:focus{
-    color: rgb(255, 232, 206);
+#lupa{
+    scale: 1.2;
+    transition: all 0.5s linear;
 }
-#lupa i{
-    left: 0;
+.giralupa{
+    transition:  0.5s;
 }
 #lupa:hover{
-    transform: scaleX(1.2);
+    scale: 1.22;
+    transition: all 0.5s linear;
 }
 #lupa:hover i{
     color: rgb(255, 255, 255);
@@ -272,8 +336,12 @@
 }
 
 #bottonbar{
-    background-color: rgb(255, 232, 206);
-    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    height: 20vh;
     width: 100%;
 }
 
